# chat-example

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  Justfile  Makefile  README.md  REPORTE_ERROR.md  justfile_append.txt  requirements.txt  test_guard_agent.py  test_memory.py  test_observability.py
.agents/: summary.md  todo.md  verification.md
agents/: ARCHITECTURE.md  COMMANDS.md  CONVENTIONS.md  DECISIONS.md  PRODUCT.md  ROADMAP.md  SPEC.md  STACK.md
docs/: agente-orquestador.md  mcp-architecture.md
docs/diagrams/: flowchart-orquestador.mmd
lib/mcp/: router.py
poc/: .env.example  config.toml  prompts.toml
poc/agent-guard/src/agents/: guard_agent.py
poc/agent-orquestador/: Makefile  README.md  pyproject.toml  requirements.txt  test_deepseek.py  test_direct.py  test_full_execution.py  test_import_agente.py  test_intent_analysis.py  test_llm.py  test_mcp.py  test_mcp_wrapper.py  test_orquestador.py  test_orquestador_direct.py  test_tool_execution.py  test_tool_name.py
poc/agent-orquestador/config/: prompts.toml
poc/agent-orquestador/src/: __init__.py
poc/agent-orquestador/src/agents/: orquestador_agent.py  orquestador_agent.py.bak  orquestador_agent_v1.py
poc/agent-orquestador/src/registry/: tool_registry.py
poc/agent-orquestador/src/schemas/: orquestador.py  tool.py
poc/agent-orquestador/src/services/: config_service.py  config_toml_service.py  embedding_service.py  logger.py  mcp_wrapper.py  memory_service.py  prompt_service.py  session_service.py  weather_agent_wrapper.py
poc/agent-orquestador/src/validators/: decision_validator.py
poc/agent-weather/: .env.example  CHAT_README.md  CHAT_USAGE.md  INSTRUCCIONES_PROBAR.md  Makefile  README_PROBAR.md  demo_chat.py  demo_generic_chat.py  probar_agente.py  pyproject.toml  requirements.txt  test_integration.py
poc/agent-weather/src/: chat_cli.py  chat_cli_generic.py  config.py  test_chat.py
poc/agent-weather/src/agents/: weather_agent.py
poc/agent-weather/src/schemas/: chat.py
poc/agent-weather/src/services/: deepseek_service.py  generic_chat_service.py  mcp_service.py  weather_chat_agent.py  weather_service.py
poc/agent-weather/src/tests/: conftest.py  test_weather_agent.py
poc/chatCLI/: Makefile  pyproject.toml  requirements.txt  test_openrouter.py
poc/chatCLI/src/: chat_cli.py  test_chat.py
poc/chatCLI/src/agents/: __init__.py  orquestador_agent.py  orquestador_agent_llm.py
poc/chatCLI/src/chat/: chat_cli.py
poc/chatCLI/src/registry/: __init__.py  tool_registry.py
poc/chatCLI/src/services/: agent_client.py  config.py  deepseek_service.py  llm_service.py  mcp_client.py  weather_chat_agent.py
poc/chatCLI/src/validators/: __init__.py  decision_validator.py
scripts/: clean_sessions.py
src/: config.py
src/schemas/: weather.py
tasks/: TODO.md
workflows/: IMPLEMENTATION.md
(+1 files in other folders)
