[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chat-cli"
version = "0.1.0"
description = "Interfaz CLI para sistema de chat inteligente"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
    {name = "Team", email = "team@example.com"}
]
dependencies = [
    "langgraph==1.1.6",
    "pydantic==2.12.5",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["chat_cli*"]

[tool.black]
line-length = 88
target-version = ['py314']

[tool.pytest.ini_options]
testpaths = ["src/tests"]
pythonpath = ["src"]
